--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -1,7 +1,7 @@
 <h1>The best movies according to Malik</h1>
 <h2>My top 3 movies of all time</h2>
 <hr>
-<h3>Transformars</h3> 
+<h3>Transformers</h3> 
 <p>It is a sci-fi movie of aliens which can transfor into machine.</p>
 <h3>LOKI</h3>
 <p>It is a season on a charater in marvel universe who is known as god of mischief</p>
